--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.8.6",
+    "antd-img-crop": "^4.17.0",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
